# coug_fgo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  dependencies.repos
.github/workflows/: ros2_build_and_test.yml  ros2_ci.yml
coug_fgo/: CMakeLists.txt  package.xml
coug_fgo/config/: batch_params.yaml  coug_fgo_params.yaml  plotjuggler.xml.template  rviz_config.rviz.template
coug_fgo/include/coug_fgo/: dvl_a50_odom.hpp  dvl_a50_odom_node.hpp  dvl_a50_twist.hpp  dvl_a50_twist_node.hpp  factor_graph.hpp  factor_graph_core.hpp  factor_graph_node.hpp  factor_graph_py.hpp  fluid_pressure_odom.hpp  imu_ned_to_enu.hpp  navsat_odom.hpp  ned_to_enu.hpp  odom_ned_to_enu.hpp  odom_to_tf.hpp  origin_manager.hpp  origin_manager_node.hpp  seatrac_x150_imu.hpp  state_initializer.hpp
coug_fgo/include/coug_fgo/factors/: ahrs_factor.hpp  ahrs_yaw_factor.hpp  auv_dynamics_factor.hpp  const_vel_factor.hpp  constant_velocity_factor.hpp  depth_factor.hpp  dvl_factor.hpp  dvl_loose_preint_factor.hpp  dvl_preintegrated_factor.hpp  dvl_tight_preint_factor.hpp  gps_factor.hpp  mag_factor.hpp
coug_fgo/include/coug_fgo/utils/: conversions.hpp  data_types.hpp  dvl_loose_preintegrator.hpp  dvl_preintegrator.hpp  dvl_tight_preintegrator.hpp  gtsam_conversions.hpp  logging.hpp  param_enums.hpp  ros_conversions.hpp  state_initializer.hpp  thread_safe_queue.hpp  types.hpp
coug_fgo/launch/: coug_fgo.launch.py  coug_fgo_base.launch.py  coug_fgo_dvldr.launch.py  coug_fgo_ekf.launch.py  coug_fgo_simple.launch.py  coug_fgo_viz.launch.py
coug_fgo/params/: dvl_a50_odom_params.yaml  dvl_a50_twist_params.yaml  factor_graph_params.yaml  fluid_pressure_odom_params.yaml  imu_ned_to_enu_params.yaml  navsat_odom_params.yaml  ned_to_enu_params.yaml  odom_ned_to_enu_params.yaml  odom_to_tf_params.yaml  origin_manager_params.yaml  seatrac_x150_imu_params.yaml
coug_fgo/plotjuggler/: plotjuggler.xml.template
coug_fgo/rviz/: multi_rviz_config.rviz.template  rviz_config.rviz.template
coug_fgo/src/: dvl_a50_odom.cpp  dvl_a50_odom_main.cpp  dvl_a50_odom_node.cpp  dvl_a50_twist.cpp  dvl_a50_twist_node.cpp  factor_graph.cpp  factor_graph_core.cpp  factor_graph_node.cpp  factor_graph_py.cpp  fluid_pressure_odom.cpp  fluid_pressure_odom_node.cpp  imu_ned_to_enu.cpp  imu_ned_to_enu_node.cpp  navsat_odom.cpp  navsat_odom_node.cpp  ned_to_enu.cpp  ned_to_enu_node.cpp  odom_ned_to_enu.cpp  odom_ned_to_enu_node.cpp  odom_to_tf.cpp  odom_to_tf_node.cpp  origin_manager.cpp  origin_manager_node.cpp  seatrac_x150_imu.cpp  seatrac_x150_imu_node.cpp  state_initializer.cpp
coug_fgo/src/utils/: state_initializer.cpp
coug_fgo/test/: test_ahrs_factor.cpp  test_ahrs_yaw_factor.cpp  test_auv_dynamics_factor.cpp  test_const_vel_factor.cpp  test_constant_velocity_factor.cpp  test_conversions.cpp  test_depth_factor.cpp  test_dvl_a50_odom.cpp  test_dvl_a50_twist.cpp  test_dvl_factor.cpp  test_dvl_loose_preint_factor.cpp  test_dvl_loose_preintegrator.cpp  test_dvl_preintegrated_factor.cpp  test_dvl_preintegrator.cpp  test_dvl_tight_preint_factor.cpp  test_factor_graph.cpp  test_factor_graph_core.cpp  test_gps_factor.cpp  test_mag_factor.cpp  test_origin_manager.cpp  test_origin_manager_node.cpp  test_state_initializer.cpp  test_thread_safe_queue.cpp
coug_fgo_msgs/: CMakeLists.txt  package.xml
coug_fgo_msgs/msg/: GraphMetrics.msg
eval/plots/: evo_eval.sh
evals/: README.md  _eval_bags.py  _run_offline_fgo.py  bag_evaluator.py  benchmark_plot.py  config.py  eval_bags.py  eval_bags.sh  evaluate.py  evo_bags.sh  lag_plot.py  latex-packages.txt  optuna_dashboard.sh  requirements.txt  run_evals.sh  run_offline_fgo.py  run_offline_fgo.sh  timing_plot.py  trajectory_plot.py  tune_scalars.py
evals/diagrams/: fgo_diagrams.py
evals/offline/: extractors.py  graph.py  pipeline.py
evals/plots/: benchmark.py  benchmark_plot.py  benchmark_plots.py  common.py  lag.py  lag_plot.py  lag_plots.py  proc_batch.sh  requirements.txt  state.py  state_plots.py  timing.py  timing_plot.py  timing_plots.py  trajectory.py  trajectory_plot.py  trajectory_plots.py
evals/scoring/: bags.py  estimators.py  evaluation.py  metrics.py  tum.py
evals/utils/: estimators.py  evaluation.py  evo_tools.py  factor_graph.py  log_setup.py  logging.py  pipeline.py  plotting.py  urdf.py
scripts/: batch_fgo.py  batch_params.yaml  fgo_utils.py  optuna_dashboard.sh  process_batch.py  requirements.txt  run_offline_fgo.py  run_tuning.py  tune_fgo.py  tune_scalars.py
scripts/diagrams/: fgo_diagrams.py
scripts/utils/: metrics.py  pipeline.py
