<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>coug_fgo</name>
  <version>0.0.0</version>
  <description>FGO localization and odometry for the CougUV</description>
  <maintainer email="snelsondurrant@gmail.com">snelsondurrant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <exec_depend>plotjuggler</exec_depend>
  <exec_depend>plotjuggler_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <depend>coug_interfaces</depend>
  <depend>diagnostic_updater</depend>
  <depend>dvl_msgs</depend>
  <!-- <depend>eigen</depend> -->
  <depend>geometry_msgs</depend>
  <!-- <depend>gtsam</depend> -->
  <depend>libgeographiclib-dev</depend>
  <depend>nav_msgs</depend>
  <depend>pybind11_vendor</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>seatrac_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
